# high-temp-res-mossbauer-profiles

./: Data_license.txt  README.md  ReadMe.md  pyproject.toml
Nussbaum/: Autosave_temp_profile_SEECo.py  Autosave_temp_profile_Wissoft.py  Matrix_plotting.py
Nussbaum/utils/: curve.py  fold.py  fold_1024.py  hyp_mean.py  s2n.py
Scripts/: Figure1.py  Figure2.py  Figure3.py  Figure4_(Temperature_profile_fitting).py  FigureS5.py
